syntax = "proto3";

package calculator;
option go_package = "calculator/calculatorpb";

message SumRequest {
    int32 numA = 1;
    int32 numB = 2;
}

message SumResponse {
    int32 result = 1;
}

message PrimeRequest {
    int32 numA = 1;
}

message PrimeResponse {
    int32 result = 1;
}

message ComputeAverageRequest {
    int32 numA = 1;
}

message ComputeAverageResponse {
    double average = 1;
}

message FindMaximumRequest {
    int32 numA = 1;
}

message FindMaximumResponse {
    int32 result = 1;
}

service CalculatorService {
    rpc Sum (SumRequest) returns (SumResponse) {};
    rpc PrimeDecomposition (PrimeRequest) returns (stream PrimeResponse) {};    
    rpc ComputeAverage (stream ComputeAverageRequest) returns (ComputeAverageResponse) {};
    rpc FindMaximum (stream FindMaximumRequest) returns (stream FindMaximumResponse) {};
}

